--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "name": "BenchBnB",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BCrawfordScott/BenchBnB.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BCrawfordScott/BenchBnB/issues"
+  },
+  "homepage": "https://github.com/BCrawfordScott/BenchBnB#readme"
 }
